src/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ActionProviders__c</fullName>
        <label>Action Providers</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ApplicationName__c</fullName>
        <label>Application Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentConfigId__c</fullName>
        <externalId>true</externalId>
        <label>Component Config Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentName__c</fullName>
        <label>Component Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Config__c</fullName>
        <label>Config</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderClassName__c</fullName>
        <label>Class name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderPackageName__c</fullName>
        <label>Package name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <label>Data Provider</label>
        <referenceTo>Apttus_Base2__UIComponentProviderMeta__mdt</referenceTo>
        <relationshipLabel>Data Provider</relationshipLabel>
        <relationshipName>DataProvider</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__TemplateName__c</fullName>
        <label>Template</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apttus UI Component Configuration Meta</label>
    <pluralLabel>Apttus UI Component Configurations Meta</pluralLabel>
</CustomObject>